# RandomGame

./: CMakeLists.txt  main.cpp  state.h
Common/: common.h
Main Menu/: mainMenu.cpp  mainMenu.h
MainMenu/: mainMenu.cpp  mainMenu.h
RandMenu/: randMenu.cpp  randMenu.h
Settings/: settings.cpp  settings.h
